@@ -39,6 +39,7 @@ enum {BRG, BIF, BMF, BAF, MAF, GFF, LastFileType};
 #define BFAST_MATCHES_READS_FILTERED_FILE_EXTENSION "fa"
 #define BFAST_ALIGNED_FILE_EXTENSION "baf"
 #define BFAST_MAF_FILE_EXTENSION "maf"
+#define BFAST_GFF_FILE_EXTENSION "gff"
 
 #define RGMATCH_MERGE_ROTATE_NUM 100000
 #define READ_ROTATE_NUM 1000000
